# Rocket-SSE-DMs-with-tokio-channels

./: Cargo.toml  index.html  receive.html
src/: main.rs
src/cors/: mod.rs
src/model/: message.rs  user.rs
