[package]
name = "websocket_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.32.0"
